--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,15 @@
-html,
-body,
-header,
-#intro {
-    height: 100%;
-}
-
-#intro {
-    background: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg")no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    }
-  }
-  <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+  <html>
 <head>
   <title>My first styled page</title>
   <style type="text/css">
   body {
+    font-family: Georgia, "Times New Roman",
+          Times, serif;
     color: purple;
     background-color: #d8da3d }
+  h1 {
+    font-family: Helvetica, Geneva, Arial,
+          SunSans-Regular, sans-serif }
   </style>
 </head>
 
