add the html structure to pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,12 @@
-  <html>
-<head>
-  <title>My first styled page</title>
-  <style type="text/css">
-  body {
-    font-family: Georgia, "Times New Roman",
-          Times, serif;
-    color: purple;
-    background-color: #d8da3d }
-  h1 {
-    font-family: Helvetica, Geneva, Arial,
-          SunSans-Regular, sans-serif }
-  </style>
-</head>
-
-<body>
+ .header{
+     color: black;
+    font-weight: lighter;
+ }
+ .introduction{
+     padding: 5 px;
+     border-style: solid;
+     border-top: solid;
+     border-bottom: none;
+     border-left: none;
+     border-right: none;
+ }
